# PAMSI_sortowanie

./: ArrayToSort.cpp  ArrayToSort.hh  CMakeLists.txt  README.md  change_name.hh  helper_func.cpp  helper_func.hh  main.cpp  menu.cpp  menu.hh  my_mergesort.cpp  my_mergesort.hh  my_quicksort.cpp  my_quicksort.hh  my_sorts.cpp  my_sorts.hh  random_fill.cpp  random_fill.hh
inc/: file_managment.hh  helper_func.hh  menu.hh  my_heapsort.hh  my_insertionsort.hh  my_introsort.hh  my_mergesort.hh  my_quicksort.hh
sprawozdanie/: intro_wykres.xlsx  merge_wykres.xlsx  porównanie.xlsx  quick_wykres.xlsx
src/: file_managment.cpp  helper_func.cpp  main.cpp  menu.cpp  my_heapsort.cpp  my_insertionsort.cpp  my_introsort.cpp  my_mergesort.cpp  my_quicksort.cpp
